--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "^2.1.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-barcode-scanner-google": "^1.4.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.4",
