--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 {
   "name": "poc",
   "version": "0.0.1",
@@ -13,12 +12,15 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
     "@react-native-community/datetimepicker": "^2.1.0",
+    "@react-native-firebase/app": "^6.3.4",
+    "@react-native-firebase/ml-vision": "^6.3.4",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-camera": "^3.19.0",
     "react-native-gesture-handler": "^1.4.1",
-    "react-native-reanimated": "^1.3.0",
+    "react-native-reanimated": "^1.7.0",
     "react-native-screens": "^2.0.0-alpha.4",
-    "react-navigation": "^4.0.10",
+    "react-navigation": "^4.1.1",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-hooks": "^1.1.0",
     "react-navigation-stack": "^1.10.3"
@@ -34,47 +36,12 @@
     "react-test-renderer": "16.9.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-navigation|react-navigation-drawer|@react-native-community|react-native-barcode-scanner-google|react-navigation-redux-helpers|@react-navigation/.*)"
+    ],
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
   }
 }
-=======
-{
-  "name": "poc",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@react-native-community/async-storage": "^1.6.3",
-    "@react-native-community/datetimepicker": "^2.1.0",
-    "react": "16.9.0",
-    "react-native": "0.61.4",
-    "react-native-barcode-scanner-google": "^1.4.2",
-    "react-native-gesture-handler": "^1.4.1",
-    "react-native-reanimated": "^1.3.0",
-    "react-native-screens": "^2.0.0-alpha.4",
-    "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.2.2",
-    "react-navigation-hooks": "^1.1.0",
-    "react-navigation-stack": "^1.10.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/runtime": "^7.7.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.6.0",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.57.0",
-    "react-test-renderer": "16.9.0"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
-}
->>>>>>> aa135508abd09774981f8222d5f9e089bfd6fee0
