--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.61.4",
     "react-native-camera": "^3.19.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "^2.0.0-alpha.4",
     "react-navigation": "^4.1.1",
