--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-camera": "^3.19.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-prompt-android": "^1.1.0",
+    "react-native-push-notification": "^3.1.9",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "^2.0.0-alpha.4",
     "react-navigation": "^4.1.1",
