react-native updated to 0.62, added account types

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@react-native-firebase/firestore": "^6.3.4",
     "@react-native-firebase/ml-vision": "^6.3.4",
     "native-base": "^2.13.8",
-    "react": "16.9.0",
-    "react-native": "0.61.4",
+    "react": "^16.11.0",
+    "react-native": "^0.62.0",
     "react-native-camera": "^3.19.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-prompt-android": "^1.1.0",
