--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.11.0",
     "react-native": "^0.62.0",
     "react-native-camera": "^3.19.0",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-prompt-android": "^1.1.0",
     "react-native-push-notification": "^3.1.9",
