--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-camera": "^3.19.0",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-input-prompt": "^1.0.0",
     "react-native-prompt-android": "^1.1.0",
     "react-native-push-notification": "^3.1.9",
     "react-native-reanimated": "^1.7.0",
