--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.6.3",
     "@react-native-community/datetimepicker": "^2.1.0",
     "@react-native-firebase/app": "^6.3.4",
@@ -23,6 +24,7 @@
     "react-native-credit-card-input": "^0.4.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-input-prompt": "^1.0.0",
+    "react-native-pie": "^1.1.2",
     "react-native-prompt-android": "^1.1.0",
     "react-native-push-notification": "^3.1.9",
     "react-native-reanimated": "^1.7.0",
